--- a/package.json
+++ b/package.json
@@ -1,13 +1,20 @@
 {
-  "name": "create-readme",
+  "name": "readme-generator",
   "version": "1.0.0",
+  "description": "A simple README generator using Node.js and Inquirer",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
-  "author": "",
-  "license": "ISC",
-  "description": "",
+  "keywords": [
+    "README",
+    "generator",
+    "inquirer",
+    "nodejs"
+  ],
+  "author": "Your Name",
+  "license": "MIT",
   "dependencies": {
     "inquirer": "^11.1.0"
   }
